--- a/backend/templates/product_detail.html
+++ b/backend/templates/product_detail.html
@@ -2,8 +2,19 @@
 
 {% block content %}
 <h2>{{ product.name }}</h2>
-<img src="{{ product.photo.url }}" alt="{{ product.name }}">
-<p>${{ product.price }}</p>
-<p>{{ product.description }}</p>
-<a href="{% url 'contact_seller' product.id %}">Contact Seller</a>
+<div class="product-details">
+    <img src="{{ product.photo.url }}" alt="{{ product.name }}" class="product-image">
+    <p>Price: ${{ product.price }}</p>
+    <p>Seller: {{ product.seller.username }}</p>
+    <p>Description: {{ product.description }}</p>
+
+    {% if user == product.seller %}
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" name="update">Update Product</button>
+            <button type="submit" name="delete" onclick="return confirm('Are you sure you want to delete this product?');">Delete Product</button>
+        </form>
+    {% endif %}
+</div>
 {% endblock %}
