--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -2,6 +2,11 @@
 
 {% block content %}
 <h2>Available Products</h2>
+
+{% if user.is_authenticated %}
+    <a href="{% url 'add_product' %}" class="btn btn-add">Add New Product</a>
+{% endif %}
+
 <div class="products">
     {% if products %}
         {% for product in products %}
