--- a/backend/static/styles.css
+++ b/backend/static/styles.css
@@ -8,7 +8,7 @@ body {
 
 /* Header */
 header {
-    background-color: #f8f8f8;
+    background-color: #33ea0f;
     padding: 10px 20px;
     text-align: center;
     border-bottom: 1px solid #ddd;
@@ -24,17 +24,17 @@ nav {
 }
 
 nav a {
-    margin: 0 15px;
+    display: inline-block;
+    padding: 10px 15px;
     text-decoration: none;
-    color: #333;
-    font-weight: bold;
-    padding: 5px 10px;
-    transition: background-color 0.3s, color 0.3s;
+    color: #333; /* Default color */
+    transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition */
 }
 
+/* Hover effect */
 nav a:hover {
-    background-color: #ddd;
-    color: #000;
+    background-color: #f6faff; /* Background color on hover */
+    color: #000000; /* Text color on hover */
 }
 
 .user-info {
